exports[`store store decrement 1`] = `
Object {
  "count": -1,
}
`;

exports[`store store increment 1`] = `
Object {
  "count": 1,
}
`;

exports[`store store init state 1`] = `
Object {
  "count": 0,
}
`;
